# ProtonEngine

./: .clang-format  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: copy_assets.cmake  download_dependencies.cmake
core/: CMakeLists.txt
core/include/proton_engine_core/: proton_application.h  proton_entrypoint.h
core/include/protonengine/core/: application.h  asset_manager.h  components.h  cube.h  entity.h  entrypoint.h  scene.h  triangle.h  window.h
core/include/protonengine/core/assets/: image.h
core/include/protonengine/core/components/: mesh_renderer.h  tag.h  transform.h
core/src/: application.cpp  asset_manager.cpp  cube.cpp  entity.cpp  proton_application.cpp  scene.cpp  triangle.cpp  window.cpp
core/src/assets/: image.cpp
engine/: CMakeLists.txt
engine/assets/: CMakeLists.txt  image.cpp  model.cpp
engine/assets/include/protonengine/assets/: asset_manager.h  image.h  model.h
engine/assets/src/: asset_manager.cpp  image.cpp  model.cpp
engine/common/: CMakeLists.txt
engine/common/include/protonengine/common/: event_bus.h  key_codes.h  key_state.h  logger.h
engine/common/src/: color.h  event_bus.cpp  logger.cpp
engine/components/: CMakeLists.txt  native_script.cpp  native_script.h  proton_script.cpp
engine/components/include/protonengine/components/: camera.h  mesh_renderer.h  proton_script.h  tag.h  transform.h
engine/components/src/: proton_script.cpp  temp.cpp
engine/core/: CMakeLists.txt  application.cpp  asset_manager.cpp  color.h  delta_time.cpp  delta_time.h  entity.cpp  event_bus.cpp  event_bus.h  input.cpp  input.h  logger.cpp  scene.cpp  window.cpp  window.h
engine/core/include/: delta_time.h  window.h
engine/core/include/protonengine/core/: application.h  asset_manager.h  entity.h  event_bus.h  input.h  logger.h  scene.h  updatable.h
engine/core/include/protonengine/core/components/: camera.h  camera_component.h  light_component.h  mesh_renderer.h  native_script.h  proton_script.h  script_component.h  tag.h  transform.h  transform_component.h
engine/core/src/: application.cpp  asset_manager.cpp  delta_time.cpp  delta_time.h  entity.cpp  event_bus.cpp  input.cpp  logger.cpp  scene.cpp  window.cpp  window.h
engine/core/src/components/: native_script.cpp  proton_script.cpp
engine/include/: CMakeLists.txt
engine/include/protonengine/: proton_api.h  proton_interface.h
engine/include/protonengine/assets/: image.h  model.h
engine/include/protonengine/components/: camera.h  mesh_renderer.h  proton_script.h  tag.h  transform.h
engine/include/protonengine/core/: application.h  asset_manager.h  cube.h  entity.h  entrypoint.h  key_codes.h  key_state.h  logger.h  scene.h
engine/include/protonengine/math/: constants.h
engine/include/protonengine/renderer/: irenderer.h  mesh.h  renderer.h  shader_program.h  texture.h
engine/include/protonengine/user_interface/: debug_layer.h  layer.h
engine/renderer/: CMakeLists.txt  mesh.cpp  renderable_object.h  renderer.cpp  renderer.h  shader_program.cpp  texture.cpp
engine/renderer/include/protonengine/renderer/: camera.h  ibuffer.h  irenderer.h  light.h  material.h  mesh.h  renderer.h  shader_program.h  texture.h  transform.h  transform_component.h  vertex.h
engine/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.h
engine/renderer/shaders/: shader.fragment  shader.vertex
engine/renderer/src/: irenderer_internal.h  mesh.cpp  renderable_light.h  renderable_object.h  renderer.cpp  shader_program.cpp  texture.cpp
engine/renderer/src/opengl/: buffer.cpp  buffer.h  opengl_renderer.cpp  opengl_renderer.h  shader_program.cpp  shader_program.h
engine/sdk/: CMakeLists.txt
engine/sdk/include/protonengine/: proton_interface.h
engine/sdk/include/protonengine/assets/: image.h
engine/sdk/include/protonengine/components/: camera.h  mesh_renderer.h  tag.h  transform.h
engine/sdk/include/protonengine/core/: application.h  asset_manager.h  cube.h  scene.h  triangle.h
engine/sdk/include/protonengine/renderer/: mesh.h  renderer.h  shader_program.h  texture.h
engine/ui/: CMakeLists.txt
engine/ui/include/protonengine/ui/: debug_layer.h  frame.h  ilayer.h  layer.h  ui_context.h
engine/ui/src/: debug_layer.cpp  frame.cpp  layer.cpp  ui_context.cpp
engine/user_interface/: CMakeLists.txt  debug_layer.cpp  layer.cpp
engine_assets/: CMakeLists.txt
engine_assets/shaders/: shader.frag  shader.fragment  shader.vert  shader.vertex
graphviz/: CMakeLists.txt
renderer/: CMakeLists.txt
renderer/include/protonengine/renderer/: mesh.h  renderer.h  shader_program.h  texture.h
renderer/shaders/: shader.fragment  shader.vertex
renderer/src/: mesh.cpp  renderer.cpp  shader_progam.cpp  texture.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
sandbox/src/scripts/: camera_controller.cpp  camera_controller.h  rotator.cpp  rotator.h
